--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=1234
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
+
+//hello
